cluster/apps/database/crunchy-postgres-operator/operator/minio-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: minio
  namespace: database
spec:
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app: minio
---
kind: Endpoints
apiVersion: v1
metadata:
  name: minio
  namespace: database
  labels:
    app: minio
subsets:
  - addresses:
      - ip: 192.168.1.49
    ports:
      - name: http
        port: 9000
        protocol: TCP
