cluster/apps/database/crunchy-postgres-operator/operator/minio-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: database
  annotations:
    kubernetes.io/ingress.class: "nginx"
    hajimari.io/enable: "true"
    hajimari.io/icon: "podcast"
    hajimari.io/group: "media"
spec:
  rules:
    - host: minio.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
  tls:
    - hosts:
        - minio.${SECRET_DOMAIN}
